ドキュメント最新化、swaggerをCIに組み込み
